--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/framework-bundle": "^5.2",
         "symfony/messenger": "^5.2",
         "symfony/routing": "^5.2",
-        "symfony/http-kernel": "^5.2"
+        "symfony/http-kernel": "^5.2",
+        "lydic-group/filtering": "^0.1.0"
     },
     "autoload": {
         "psr-4": { "LydicGroup\\RapidApiCrudBundle\\": "" },
