--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/messenger": "^5.2",
         "symfony/routing": "^5.2",
         "symfony/http-kernel": "^5.2",
-        "lydic-group/filtering": "^0.1.0"
+        "lydic-group/filtering": "^0.1.0",
+        "symfony/string": "^5.2"
     },
     "autoload": {
         "psr-4": { "LydicGroup\\RapidApiCrudBundle\\": "src/" },
